--- a/apps/docs/styles/globals.css
+++ b/apps/docs/styles/globals.css
@@ -3,23 +3,24 @@
 @tailwind utilities;
 
 @layer base {
-    html,
-    body {
-      @apply font-sans;
-      @apply selection:bg-pink-700/50 selection:dark:bg-pink-900/50;
-      @apply subpixel-antialiased;
-      @apply overflow-hidden;
-    }
-  }
-  
   html,
-  body,
-  body > div:first-child,
-  div#__next,
-  div#__next > div:first-child {
-    height: 100%;
+  body {
+    @apply font-sans;
+    @apply selection:bg-pink-700/50 selection:dark:bg-pink-900/50;
+    @apply subpixel-antialiased;
+    @apply overflow-hidden;
+    @apply dark:bg-black/60
   }
+}
   
-  div#__next {
-    position: relative;
-  }
+html,
+body,
+body > div:first-child,
+div#__next,
+div#__next > div:first-child {
+  height: 100%;
+}
+
+div#__next {
+  position: relative;
+}
